--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
   <style>
     :root{
-      --bg:#FFFFFF;                 /* 전체 배경 */
+      --bg:#FFFFFF;
       --ink:#0f172a;--sub:#334155;--brand:#86AEDB;--soft:#f1f5f9;--line:#e7e7e7;
-      --muted:#6B7280;--accent:#E9C89B;--rule:#E6D7BD;
-      --gold:#B9A06B;              /* INVITATION 금빛 톤 */
+      --muted:#6B7280;--accent:#E9C89B;--rule:#E6D7BD;--gold:#B9A06B;
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);
@@ -36,10 +35,10 @@
     .hero img{width:100%;height:auto}
     .badge{position:absolute;right:16px;bottom:16px;background:#ffffffdd;color:var(--ink);padding:8px 12px;border-radius:999px;font-weight:600;font-size:14px;backdrop-filter:saturate(180%) blur(6px)}
 
-    /* 공통 레이아웃 */
+    /* Layout */
     .section{padding:28px 16px}
 
-    /* 플랫 스타일 (모든 카드 모양 제거) */
+    /* Flat style */
     .card{background:transparent;border:none;padding:0}
     .grid{display:grid;gap:12px}
     .grid.two{grid-template-columns:1fr 1fr}
@@ -55,17 +54,11 @@
     .sticky-share{position:sticky;bottom:0;background:#ffffffcc;border-top:1px solid var(--line);backdrop-filter:saturate(180%) blur(6px)}
     .sticky-share .bar{max-width:720px;margin:0 auto;display:flex;gap:8px;padding:10px 12px}
 
-    /* ===== 영어 인사 블록(오너먼트) ===== */
+    /* English invite block */
     .eng-invite{padding:20px 0}
     .eng-invite .inv-label{
-      font-family:"Playfair Display", serif;
-      color:var(--gold);
-      letter-spacing:.28em;
-      text-transform:uppercase;
-      font-weight:700;
-      text-align:center;
-      font-size:clamp(13px,2vw,16px);
-      margin:0 0 18px;
+      font-family:"Playfair Display", serif;color:var(--gold);letter-spacing:.28em;
+      text-transform:uppercase;font-weight:700;text-align:center;font-size:clamp(13px,2vw,16px);margin:0 0 18px;
     }
     .eng-invite .headline{
       font-family:"Playfair Display", serif;font-weight:700;letter-spacing:.18em;text-transform:uppercase;
@@ -85,23 +78,13 @@
     .orn::after{right:0;background:linear-gradient(90deg,var(--rule),transparent)}
     .orn .dot{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:8px;height:8px;background:var(--accent);border-radius:2px;box-shadow:0 0 0 4px rgba(233,200,155,.15)}
 
-    /* ===== RSVP block styles (영문, 스크린샷 스타일) ===== */
+    /* RSVP block styles */
     .rsvp-block{ text-align:center; }
     .rsvp-eyebrow{
-      font-size:14px; color:#94a3b8;
-      letter-spacing:.08em; text-transform:capitalize;
-      margin:0 0 12px;
+      font-size:14px; color:#94a3b8; letter-spacing:.08em; text-transform:capitalize; margin:0 0 12px;
     }
-    .rsvp-copy{
-      margin:0 0 16px;
-      line-height:1.9;
-      color:#0f172a;
-    }
-    .btn.full{
-      width:100%; height:52px;
-      font-weight:700; font-size:16px;
-      border-radius:12px;
-    }
+    .rsvp-copy{ margin:0 0 16px; line-height:1.9; color:#0f172a; }
+    .btn.full{ width:100%; height:52px; font-weight:700; font-size:16px; border-radius:12px; }
   </style>
 </head>
 <body>
@@ -112,7 +95,7 @@
       <div class="badge">2026.06.06 • [예식장]</div>
     </header>
 
-    <!-- 영어 인사 블록 -->
+    <!-- English invite -->
     <section class="section">
       <div class="eng-invite" aria-label="English invitation">
         <p class="inv-label">INVITATION</p>
@@ -124,7 +107,7 @@
       </div>
     </section>
 
-    <!-- 일정/장소 -->
+    <!-- When & Where -->
     <section class="section">
       <div class="card">
         <p class="muted" style="margin:0 0 6px">When &amp; Where</p>
@@ -146,7 +129,7 @@
       </div>
     </section>
 
-    <!-- 오시는 길 -->
+    <!-- Directions -->
     <section class="section">
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Directions</p>
@@ -156,7 +139,7 @@
       </div>
     </section>
 
-    <!-- 갤러리 -->
+    <!-- Gallery -->
     <section class="section">
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Gallery</p>
@@ -168,7 +151,7 @@
       </div>
     </section>
 
-    <!-- 계좌 -->
+    <!-- Account Info -->
     <section class="section">
       <div class="card">
         <p class="muted" style="margin:0 0 6px">Account Info (선택)</p>
@@ -179,21 +162,20 @@
       </div>
     </section>
 
-    <!-- RSVP (영문, 스크린샷 스타일) -->
+    <!-- RSVP -->
     <section class="section" id="rsvp">
       <div class="card rsvp-block">
         <p class="rsvp-eyebrow">RSVP</p>
         <p class="rsvp-copy">
-          We’re grateful to celebrate with you.<br/>
-          To help us plan thoughtfully, please let us know<br/>
-          whether you’ll be able to attend.
+          We’d be honored to celebrate with you.<br/>
+          please let us know if you’ll be able to attend.
         </p>
         <a class="btn brand full" target="_blank" rel="noopener"
            href="https://forms.gle/your-form-id">Send RSVP</a>
       </div>
     </section>
 
-    <!-- 고정 공유 바 -->
+    <!-- Sticky share -->
     <div class="sticky-share">
       <div class="bar">
         <button class="btn" id="btnCopy">링크 복사</button>
@@ -217,7 +199,7 @@
     // 캘린더(ICS)
     document.getElementById('btnAddCal')?.addEventListener('click', () => {
       const title='Wedding of Daniel & Diana';
-      const start=new Date(2026,5,6,13,30); // 2026-06-06 13:30
+      const start=new Date(2026,5,6,13,30);
       const end=new Date(2026,5,6,15,30);
       const loc='[예식장/홀명]';
       const pad=n=>String(n).padStart(2,'0');
