--- a/index.html
+++ b/index.html
@@ -46,7 +46,16 @@
     .btn.brand{background:var(--brand);border-color:var(--brand);color:#fff;font-weight:700}
     .muted{color:var(--sub)}
     .map{border:0;width:100%;height:280px;border-radius:12px}
+
+    /* 갤러리: 정사각형 크롭 */
     .gallery{display:grid;gap:8px;grid-template-columns:repeat(3,1fr)}
+    .gallery img{
+      width:100%;
+      aspect-ratio:1/1;     /* 정사각형 비율 */
+      object-fit:cover;     /* 중앙 기준으로 꽉 채우기 */
+      border-radius:8px;    /* 선택: 살짝 곡선 */
+    }
+
     .list{margin:12px 0 0;padding:0;list-style:none}
     .list li{padding:10px 0;border-top:none;display:flex;justify-content:space-between;gap:12px}
     .footer{padding:40px 16px 80px;color:#475569;text-align:center}
